# XJTU-RM-TASK04-LIN

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
src/: hik_camera_node.cpp
